# College

./: .clang-format  .gitignore  README.md  a.out  gcd.py  teste.py
AC/Ficha 1/: Ex 11.asm  Ex 2.asm  Ex 3.asm  Ex 4.asm  Ex 6.asm  Ex 7.asm  Ex 8.asm
AC/Ficha 2/: Ex 2.asm  Ex 5.asm  Ex 6.asm
AED/MIUP 2024/: The Sacred Tree Network.cpp  Zion's Power Grid.cpp
AED/Practical Class 02/: 000 - This is not a problem!.cpp  001 - Prime Numbers.cpp  002 - Sequence Game.cpp  003 - Saving Pipefish.cpp  004 - Number Spiral.cpp  1_input.txt  2_input.txt  3_input.txt  4_input.txt  Makefile
AED/Practical Class 03/: 005 - Number Searching.cpp  006 - Lower Bound.cpp  007 - Interval Count.cpp  008 - Backpacking Trip.cpp  009 - Closest Sums.cpp  010 - Word Game.cpp  011 - Cool Numbers.cpp
AED/Practical Class 04/: 012 - Game Tournament.cpp  (+7 more)
C_Programming/: domino.c  main
Ch02/: conway.py
DA/TP1-Graphs/: CMakeLists.txt  ex1.cpp
DA/TP1-Graphs/TP1/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  tests.cpp
DA/TP1-Graphs/data_structures/: Graph.h  MutablePriorityQueue.h  createGraphs.cpp  createGraphs.h
DA/TP3-Greedy/: CMakeLists.txt  da2425_p03_student  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp
DA/TP3-Greedy/TP3/: MSTTestAux.h  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp
DA/TP3-Greedy/data_structures/: Graph.h  UFDS.cpp  UFDS.h
MT1/: exercise3_m.py  exercise4_m.py
P02/: exercise4.py
P04/: exercise1.py  exercise2.py  exercise5.py
P05/: exercise1.py  exercise2.py  exercise4.py
P06/: exercise2.py  exercise4.py  exercise5.py
P07/: exercise1.py  exercise2.py  exercise4.py
P08/: exercise3.py  exercise5.py
PRO/: teste  teste.cpp
Projetos Extra/: domino.c  domino.cpp  domino.h
TC/: automato.h  automatoToRegex.cpp
(+868 files in other folders)
